# updown

./: .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-3e507d9aa9a8118094115af960182b9d87c73fc4e27869bf81c8fa6fd3cb8851.json  query-4a6d51c22f5bcbc3e18ed3ad5acf7ece12c477c3ca62363e884d8056f9c92ac1.json  query-661374a783e4093f650271fba1e34ade5c3d2f1adbcf3706d83818713a7a177b.json  query-722d4d5dd8e77ad0e10118582b4417cfa89238b2115b083b79b0b43ed3fc7f50.json  query-80f47eabea4bcda8180d2d367e9848bc32fc86d035e325c4a8f71348bf444b7f.json  query-94237023eee8e902d29a0a31c88be20e2ce46e76e052a5eefadfa252cc382247.json  query-c174d965cbb353f7591be3e458c10e4086ec50b2c56f85c70b57409fd15019ff.json  query-da1debdc999e8ae6fcefb7631ce80cea13b32ebb5815013baf28c9886e538a0b.json  query-e0c249616585f286ee91c8df63007894c53b07b5afb22ca4765d9ed3ae7098b3.json  query-e3c8a7b0cf6479a50501c6cb4c295c4c65bc6259e3b946d9269e6e207f284119.json
migrations/: 20230606171137_create_users.up.sql  20230606181822_create_sites.down.sql  20230606181822_create_sites.up.sql  20230607182840_create_logins.down.sql  20230607182840_create_logins.up.sql  20230609172030_create_responses.down.sql  20230609172030_create_responses.up.sql  20230615183630_fix_unique_index_on_site.down.sql  20230615183630_fix_unique_index_on_site.up.sql
src/: lib.rs  main.rs
static/: main.js  tailwind.css
