[package]
name = "updown"
version = "0.1.0"
edition = "2021"
default-run = "updown"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus-free-icons = { version = "0.6", features = ["bootstrap"] }
dioxus-interpreter-js = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-liveview = { git = "https://github.com/dioxuslabs/dioxus", features = ["salvo"] }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-hot-reload = { git = "https://github.com/dioxuslabs/dioxus" }
salvo = { version = "0.37", features = ["full", "affix", "ws"] }
sqlx = { version = "0.7.0-alpha.3", features = ["sqlite", "migrate", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "6.4.2"
serde = "1.0.152"
anyhow = "1.0.69"
rand = "0.8.5"
once_cell = "1.17.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
nanoid = { version = "0.4.0" }
reqwest = "0.11.18"

[profile.dev.package.sqlx-macros]
opt-level = 3
